--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
+<head>
+  ...
+  <style>
+    /* هنا تحط كل كود التنسيق */
+    body {
+      background-image: url('halloween-6880.gif');
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+      font-family: 'Arial', sans-serif;
+      text-align: center;
+      padding: 20px;
+      color: white;
+    }
+
+    /* بقية التنسيقات: container, h1, iframe, button, .disclaimer */
+  </style>
+  ...
+</head>
+
+
+
 body {
   background-image: url("bg/halloween-6880.gif");
   background-size: cover;
